# wikilangs

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml  website.yml
examples/: basic_usage.py  demo_comprehensive.py  demo_embeddings.py  demo_models.py  wikilangs_tutorial.ipynb
scripts/: generate_language_countries.py  hf_diagnostic.py  publish.py
src/wikilangs/: __init__.py  embeddings.py  languages.py  llm.py  markov.py  ngram.py  tokenizer.py  vocabulary.py
tests/: test_embeddings.py  test_imports.py  test_languages.py  test_markov.py  test_ngram.py  test_robust_imports.py  test_tokenizer.py  test_vocabulary.py
website/: .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
website/scripts/: fetch_languages.py  generate_language_continents.py
website/src/components/: CodeBlock.astro  Footer.astro  Header.astro  LanguageCard.astro  ThemeToggle.astro  WorldMap.astro
website/src/data/: country_continents.json  country_names.json  language_continents.json  language_countries.json  languages.json
website/src/layouts/: BaseLayout.astro
website/src/lib/: languages.ts
website/src/pages/: index.astro
website/src/pages/about/: index.astro
website/src/pages/cite/: index.astro
website/src/pages/docs/: index.astro
website/src/pages/languages/: index.astro
website/src/pages/languages/[lang]/: index.astro
website/src/pages/license/: index.astro
website/src/pages/playground/: index.astro
website/src/pages/quickstart/: index.astro
website/src/pages/research/: index.astro
website/src/styles/: global.css
