[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikilangs"
version = "0.1.1"
description = "A Python package for consuming Wikipedia language models including tokenizers, ngram models, markov chains, and vocabularies."
authors = [{name = "Omar Kamali", email = "wikilangs@omarkama.li"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pandas==2.3.3",
    "pyarrow==22.0.0",
    "huggingface_hub==0.36.0",
    "datasets==4.4.2",
    "pycountry==24.6.1",
    "vocabulous==0.1.3",
    "tokenizers==0.22.1",
    "transformers==4.57.3",
    "sentencepiece==0.2.1",
    "torch==2.9.1",
    "numpy==2.4.0",
    "babelvec==0.1.5",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
examples = [
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/wikilangs/wikilangs"
Repository = "https://github.com/wikilangs/wikilangs.git"
"Bug Tracker" = "https://github.com/wikilangs/wikilangs/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"